Changes from 1.9.0 to 1.9.1
- cmake builds fully usable for all purposes
- cmake system config option
- use of configure.ac for cmake lib abi versioning
- fixed cmake target names for consistency
- updated manpages
- fixed packaging for pkgconfig
- sipwitch setgroups support
- fixed init for debian, added lintian overrides
- removed obsolete systemd syslog.target

from 1.8.8 to 1.9.0
- systemd notify support

from 1.8.7 to 1.8.8
- missing usecure linkage...

from 1.8.6 to 1.8.7
- fixed systemd multi-arch pathing issue
- systemd unit file fixes from Michael Scherer

from 1.8.5 to 1.8.6
- fixed missing resolv.h detect for some cases
- srv resolver now can have plugins too

from 1.8.4 to 1.8.5
- more complete work on srv class
- route no longer static member of srv
- new resolver used in plugins

from 1.8.3 to 1.8.4
- eliminated libruli, integrate libresolv based srv resolver

from 1.8.2 to 1.8.3
- remote message routing
- faster reg cleanup for short time interval registrations
- management of digests changed and moved to server

from 1.8.1 to 1.8.2
- lots of voip type casting fixes
- context aware stack, call, and message options complete
- removed api splint macros!

from 1.8.0 to 1.8.1
- expose stack contexts directly to plugins
- plugins can call voip api directly, no need for redirection api
- call sessions now have contexts
- invites now use contexts

from 1.7.2 to 1.8.0
- startup and shutdown multi-context aware for v4 api
- registration cycle now v4 api protocol context aware

from 1.7.1 to 1.7.2
- modernized autoconf support

from 1.7.0 to 1.7.1
- smarter support of remote routing
- srv resolver plugin for use with libruli

from 1.6.1 to 1.7.0
- reconfiguration of exosip2 support into runtime library

from 1.6.0 to 1.6.1
- improved ssl configure check

from 1.5.0 to 1.6.0
- usage of new context aware intermediary voip functions
- fixes for official exosip2 4.0

from 1.4.0 to 1.5.0
- moved switchview into standalone package

from 1.3.3 to 1.4.0